project(Arkanoid)
cmake_minimum_required(VERSION 2.8)
add_executable(p1 1_Arkanoid/p1.cpp)
target_link_libraries(p1 -lsfml-graphics -lsfml-window -lsfml-system)
add_executable(p2 1_Arkanoid/p2.cpp)
target_link_libraries(p2 -lsfml-graphics -lsfml-window -lsfml-system)
add_executable(p3 1_Arkanoid/p3.cpp)
target_link_libraries(p3 -lsfml-graphics -lsfml-window -lsfml-system)
add_executable(p4 1_Arkanoid/p4.cpp)
target_link_libraries(p4 -lsfml-graphics -lsfml-window -lsfml-system)
add_executable(p5 1_Arkanoid/p5.cpp)
target_link_libraries(p5 -lsfml-graphics -lsfml-window -lsfml-system)
add_executable(p6 1_Arkanoid/p6.cpp)
target_link_libraries(p6 -lsfml-graphics -lsfml-window -lsfml-system)
add_executable(p7 1_Arkanoid/p7.cpp)
target_link_libraries(p7 -lsfml-graphics -lsfml-window -lsfml-system)
add_executable(p8 1_Arkanoid/p8.cpp)
target_link_libraries(p8 -lsfml-graphics -lsfml-window -lsfml-system)
add_executable(p9 1_Arkanoid/p9.cpp)
target_link_libraries(p9 -lsfml-graphics -lsfml-window -lsfml-system)


  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter ")
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ftrapv -fcatch-undefined-behavior -faddress-sanitizer")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -Wextra -Wunused-parameter -Wno-system-headers -Wno-deprecated")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wwrite-strings -Wundef -D_FORTIFY_SOURCE=2")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wuninitialized -Wparentheses")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wfloat-equal -Wstrict-overflow -Wstrict-overflow=5 -Wredundant-decls")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -pedantic-errors -W -std=c++11")
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -ggdb ${COVERAGE_FLAGS}")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
